# HaberciVatoz

./: .Functions.py.un~  .env  .fasistvatoz.py.swn  .fasistvatoz.py.swn.swp  .fasistvatoz.py.swo  .fasistvatoz.py.swp  .fasistvatoz.py.un~  .gitignore  .keep_alive.py.swp  .keep_alive.py.un~  .lastEntry.txt.un~  .mongodb.py.un~  .replit  .requirements.txt.un~  CH.md  DE.md  Deneme.py  EN.md  Faşist vatoz.rar  Functions.py  JP.md  Nijiyon Animation - 01 (BD HEVC 1920x1080 FLAC)_Subtitles01.UND.ass  Procfile  README.md  Seriler.py  Vars.py  alya.py  basvuru.py  build.py  createCountryVatozes.py  env.sh  fasist vatoz.pyw  fasistvatoz.py  fasistvatoz.pyw  fv.py  hoi4tips.py  i.py  idea.py  index.html  index.md  (+18 more)
.github/workflows/: codeql.yml  python-app.yml
Sözler/: Alya.py  Atatürk.py  CelalŞengör.py  Cengiz.py  Einstein.py  Hitler.py  Lenin.py  MeteHan.py  Stalin.py
adaklar/: Gripen#0123.txt  Loaklse#8529.txt  Maga Cyan#9359.txt  Miyamura#2787.txt  RuhHastasi#4076.txt  Sigmamale3169#4671.txt  Sosyalist vatoz#5439.txt  Tarık#9983.txt  TheOneWhoSeeksTheEnd#6445.txt  Yin Hu#5847.txt  Yurttaş Komiser Fok#5439.txt  aries#8859.txt  manga okuyan çocuk#3676.txt  Çağrı Mert Bakırcı#4555.txt  노래#5847.txt
cogs/: buttons.py  checkNews.py  imageRenderer.py  onlyDeadsCanSee.py  pp.py  random.py  selectFromList.py
foklar/: Yeni Metin Belgesi.txt
işkenceler/: Tarık#9983.txt
templates/: .adaklar.html.swp  .adaklar.html.un~  .main.html.swp  adaklar.html  adaklar.html~  images.html  main.html
varlık/: タリク#9983.txt
