[tool.poetry]
name = "repl_nix_FascistVatoz-2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.3.0"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
bs4 = "^0.0.1"
discord = "^2.1.0"
Flask = "^2.2.2"
feedparser = "^6.0.10"
selenium = "^4.8.3"
py-cord = "2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
